// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultListDisplay displays empty search message 1`] = `
<div>
  <div
    class="MuiPaper-root-116 MuiGrid-root-13 makeStyles-root-9 MuiGrid-container-14 MuiGrid-item-15 MuiPaper-elevation1-120 MuiPaper-rounded-117"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
    >
      <div
        class="MuiGrid-root-13 makeStyles-spacingItem-11 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
      />
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-true-47 MuiGrid-grid-lg-4-93"
      >
        <p
          class="MuiTypography-root-144 makeStyles-title-2 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          Vault
        </p>
        <button
          aria-label="sort descending by name"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-242"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <p
          class="MuiTypography-root-144 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          APY
        </p>
        <button
          aria-label="sort descending by APR"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-242"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <p
          class="MuiTypography-root-144 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          My Deposits
        </p>
        <button
          aria-label="sort descending by balance"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-242"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 makeStyles-tvlColumn-8 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <p
          class="MuiTypography-root-144 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          TVL
        </p>
        <button
          aria-label="sort descending by TVL"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-242"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-116 MuiCard-root-189 MuiGrid-root-13 makeStyles-root-186 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31 MuiPaper-elevation1-120 MuiPaper-rounded-117"
  >
    <div
      class="MuiGrid-root-13 makeStyles-content-188 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-10-57 MuiGrid-grid-sm-6-67 MuiGrid-grid-md-3-78"
    >
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-1-36 MuiGrid-direction-xs-column-17 MuiGrid-justify-content-xs-center-31"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15"
        >
          <img
            alt="vault search is empty"
            src="/assets/icons/empty-vaults-search.svg"
          />
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15"
        >
          <h6
            class="MuiTypography-root-144 MuiTypography-h6-154 MuiTypography-colorTextSecondary-170"
          >
            Hmmm...
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31"
      >
        <p
          class="MuiTypography-root-144 MuiTypography-body2-145"
        >
          We couldn't find any matches for your selected filters. Try other filters?
        </p>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <button
            class="MuiButtonBase-root-183 MuiButton-root-190 MuiButton-contained-198 makeStyles-filtersButton-187 MuiButton-containedPrimary-199"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-191"
            >
              Filters
            </span>
            <span
              class="MuiTouchRipple-root-242"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <button
            class="MuiButtonBase-root-183 MuiButton-root-190 MuiButton-text-192 MuiButton-textPrimary-193"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-191"
            >
              Go Back To All Vaults
            </span>
            <span
              class="MuiTouchRipple-root-242"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay displays no vaults message 1`] = `
<div>
  <div
    class="MuiGrid-root-7 makeStyles-messageContainer-2 MuiGrid-container-8 MuiGrid-direction-xs-column-11"
  >
    <div
      class="MuiGrid-root-7 MuiGrid-container-8 MuiGrid-item-9 MuiGrid-justify-content-xs-center-25"
    >
      <img
        alt="Badger Builder"
        src="/assets/icons/screwdriver-badger.svg"
      />
    </div>
    <div
      class="MuiGrid-root-7 makeStyles-helpTextContainer-5 MuiGrid-container-8 MuiGrid-item-9 MuiGrid-direction-xs-column-11 MuiGrid-justify-content-xs-center-25"
    >
      <h5
        class="MuiTypography-root-110 MuiTypography-h5-119 MuiTypography-colorTextSecondary-136"
      >
        No vaults to display
      </h5>
      <p
        class="MuiTypography-root-110 MuiTypography-body2-111 MuiTypography-colorTextSecondary-136"
      >
        Badgers are working hard to build vaults on 
        Ethereum
        . Switch network for more investment opportunities.
      </p>
    </div>
    <div
      class="MuiGrid-root-7 makeStyles-switchButtonContainer-6 MuiGrid-container-8 MuiGrid-item-9 MuiGrid-justify-content-xs-center-25"
    >
      <button
        class="MuiButtonBase-root-169 MuiButton-root-140 MuiButton-outlined-145 MuiButton-outlinedPrimary-146"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-141"
        >
          Switch Networks
        </span>
        <span
          class="MuiTouchRipple-root-172"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay does not display deprecated vaults with no user balance 1`] = `
<div>
  <div
    class="MuiGrid-root-7 makeStyles-messageContainer-2 MuiGrid-container-8 MuiGrid-direction-xs-column-11"
  >
    <div
      class="MuiGrid-root-7 MuiGrid-container-8 MuiGrid-item-9 MuiGrid-justify-content-xs-center-25"
    >
      <img
        alt="Badger Builder"
        src="/assets/icons/screwdriver-badger.svg"
      />
    </div>
    <div
      class="MuiGrid-root-7 makeStyles-helpTextContainer-5 MuiGrid-container-8 MuiGrid-item-9 MuiGrid-direction-xs-column-11 MuiGrid-justify-content-xs-center-25"
    >
      <h5
        class="MuiTypography-root-110 MuiTypography-h5-119 MuiTypography-colorTextSecondary-136"
      >
        No vaults to display
      </h5>
      <p
        class="MuiTypography-root-110 MuiTypography-body2-111 MuiTypography-colorTextSecondary-136"
      >
        Badgers are working hard to build vaults on 
        Ethereum
        . Switch network for more investment opportunities.
      </p>
    </div>
    <div
      class="MuiGrid-root-7 makeStyles-switchButtonContainer-6 MuiGrid-container-8 MuiGrid-item-9 MuiGrid-justify-content-xs-center-25"
    >
      <button
        class="MuiButtonBase-root-169 MuiButton-root-140 MuiButton-outlined-145 MuiButton-outlinedPrimary-146"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-141"
        >
          Switch Networks
        </span>
        <span
          class="MuiTouchRipple-root-172"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay uses default sort criteria by default 1`] = `
<div>
  <div
    class="MuiPaper-root-116 MuiGrid-root-13 makeStyles-root-9 MuiGrid-container-14 MuiGrid-item-15 MuiPaper-elevation1-120 MuiPaper-rounded-117"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
    >
      <div
        class="MuiGrid-root-13 makeStyles-spacingItem-11 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
      />
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-true-47 MuiGrid-grid-lg-4-93"
      >
        <p
          class="MuiTypography-root-144 makeStyles-title-2 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          Vault
        </p>
        <button
          aria-label="sort descending by name"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-280"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <p
          class="MuiTypography-root-144 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          APY
        </p>
        <button
          aria-label="sort descending by APR"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-280"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <p
          class="MuiTypography-root-144 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          My Deposits
        </p>
        <button
          aria-label="sort descending by balance"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-280"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-title-2 makeStyles-columnTitle-7 makeStyles-tvlColumn-8 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <p
          class="MuiTypography-root-144 MuiTypography-body2-145 MuiTypography-colorTextSecondary-170"
        >
          TVL
        </p>
        <button
          aria-label="sort descending by TVL"
          class="MuiButtonBase-root-183 MuiIconButton-root-174 makeStyles-sortIcon-3 makeStyles-nonSetSort-5"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-182"
          >
            <img
              alt="sort-icon"
              class="makeStyles-sortIcon-3"
              src="/assets/icons/vaults-sort-icon.svg"
            />
          </span>
          <span
            class="MuiTouchRipple-root-280"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-116 MuiCard-root-195 MuiGrid-root-13 makeStyles-root-186 MuiGrid-container-14 MuiGrid-direction-xs-column-17 MuiPaper-elevation1-120 MuiPaper-rounded-117"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
    >
      <div
        class="MuiGrid-root-13 makeStyles-iconBadgeContainer-190 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
      >
        <div
          class="makeStyles-root-196"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-197"
            src="/assets/icons/digg.svg"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47 MuiGrid-grid-lg-4-93"
      >
        <h6
          class="MuiTypography-root-144 makeStyles-vaultName-191 MuiTypography-subtitle1-155"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiBox-root-201 MuiBox-root-202"
        >
          <p
            class="MuiTypography-root-144 makeStyles-apr-198 MuiTypography-body1-146 MuiTypography-colorTextPrimary-169 MuiTypography-displayInline-172"
          >
            8.17%
          </p>
          <img
            class="makeStyles-apyInfo-200"
            src="/assets/icons/apy-info.svg"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiBox-root-201 MuiBox-root-227"
        >
          <p
            class="MuiTypography-root-144 makeStyles-itemText-188 MuiTypography-body1-146"
          >
            $0.00e-2
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiBox-root-201 MuiBox-root-231"
        >
          <p
            class="MuiTypography-root-144 makeStyles-itemText-188 MuiTypography-body1-146"
          >
            $12,463,112
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-tagsContainer-193 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-align-items-xs-center-22"
    >
      <div
        class="MuiGrid-root-13 makeStyles-iconBadgeContainer-190 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
      />
      <div
        class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
          >
            <span
              class="MuiTypography-root-144 makeStyles-label-233 MuiTypography-caption-147 MuiTypography-displayInline-172"
            >
              Platform:
            </span>
            <div
              class="MuiChip-root-234 makeStyles-tag-232 MuiChip-sizeSmall-235"
            >
              <span
                class="MuiChip-label-256 MuiChip-labelSmall-257"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-116 MuiCard-root-195 MuiGrid-root-13 makeStyles-root-186 MuiGrid-container-14 MuiGrid-direction-xs-column-17 MuiPaper-elevation1-120 MuiPaper-rounded-117"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
    >
      <div
        class="MuiGrid-root-13 makeStyles-iconBadgeContainer-190 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
      >
        <div
          class="makeStyles-root-196"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-264"
            src="/assets/icons/badger.svg"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47 MuiGrid-grid-lg-4-93"
      >
        <h6
          class="MuiTypography-root-144 makeStyles-vaultName-191 MuiTypography-subtitle1-155"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiBox-root-201 MuiBox-root-265"
        >
          <p
            class="MuiTypography-root-144 makeStyles-apr-198 MuiTypography-body1-146 MuiTypography-colorTextPrimary-169 MuiTypography-displayInline-172"
          >
            8.17%
          </p>
          <img
            class="makeStyles-apyInfo-200"
            src="/assets/icons/apy-info.svg"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiBox-root-201 MuiBox-root-268"
        >
          <p
            class="MuiTypography-root-144 makeStyles-itemText-188 MuiTypography-body1-146"
          >
            $0.00e-2
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiBox-root-201 MuiBox-root-271"
        >
          <p
            class="MuiTypography-root-144 makeStyles-itemText-188 MuiTypography-body1-146"
          >
            $43,372,000
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-tagsContainer-193 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-align-items-xs-center-22"
    >
      <div
        class="MuiGrid-root-13 makeStyles-iconBadgeContainer-190 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
      />
      <div
        class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
          >
            <span
              class="MuiTypography-root-144 makeStyles-label-233 MuiTypography-caption-147 MuiTypography-displayInline-172"
            >
              Rewards:
            </span>
            <div
              class="MuiChip-root-234 makeStyles-tag-232 MuiChip-sizeSmall-235"
            >
              <span
                class="MuiChip-label-256 MuiChip-labelSmall-257"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-auto-46"
          >
            <span
              class="MuiTypography-root-144 makeStyles-label-233 MuiTypography-caption-147 MuiTypography-displayInline-172"
            >
              Platform:
            </span>
            <div
              class="MuiChip-root-234 makeStyles-tag-232 MuiChip-sizeSmall-235"
            >
              <span
                class="MuiChip-label-256 MuiChip-labelSmall-257"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
